--- a/ToCefSharp/packages.config
+++ b/ToCefSharp/packages.config
@@ -4,4 +4,5 @@
   <package id="cef.redist.x86" version="3.2623.1401" targetFramework="net452" />
   <package id="CefSharp.Common" version="49.0.1" targetFramework="net452" />
   <package id="CefSharp.Wpf" version="49.0.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
 </packages>
